# Paralex

./: CMakeLists.txt  paralex.db  requirements.txt  setup.ps1
backend/: api.py
data/: manifest.txt  paralex.db
data/raw_uploads/: Articulo - Palarex.docx  Esquema de entrega del Documento final de  Proyecto corto_2025__2 Final (1).docx  Esquema de entrega del Documento final de  Proyecto corto_2025__2 Final - copia.docx  Esquema de entrega del Documento final de  Proyecto corto_2025__2 Final.docx  InformeFinalFCPD.docx
data/results/: benchmark_output.json  process_output.json  search_output.json  similarity_output.json  tfidf_output.json
data/sample_docs/: Articulo - Palarex.txt  Avance.txt  AvancesObjetivosProyectoDeAula.txt  Ensayo_CUDA.txt  Esquema de entrega del Documento final de  Proyecto corto_2025__2 Final (1).txt  Esquema de entrega del Documento final de  Proyecto corto_2025__2 Final - copia.txt  Esquema de entrega del Documento final de  Proyecto corto_2025__2 Final.txt  INFORME CORRELACIÓN ENTRE METODOS DE PROGRAMACIÓN.txt  InformeFinalFCPD.txt  computacion_paralela.txt  demo_doc_19.txt  demo_doc_57.txt  demo_doc_74.txt  expoobj1.txt  mapreduce_hadoop.txt  procesamiento_texto.txt  recuperacion_informacion.txt  sistemas_distribuidos.txt
data/stopwords/: english.txt  spanish.txt
frontend/: app.py
frontend/pages/: 01_explorador.py  02_search.py  03_dashboard.py  04_relaciones_temas.py  05_insights.py  06_performance.py  07_modo_demo.py
frontend/utils/: mpi_bridge.py  style.css  text_extractor.py
frontend_web/: app.js  index.html  styles.css
src/: main.cpp
src/analytics/: analyzer.cpp  analyzer.h
src/core/: document.cpp  document.h  pipeline.cpp  pipeline.h
src/database/: sqlite_manager.cpp  sqlite_manager.h
src/indexing/: inverted_index.cpp  inverted_index.h  tfidf.cpp  tfidf.h
src/mapreduce/: engine.cpp  engine.h  mapper.cpp  mapper.h  reducer.cpp  reducer.h
src/search/: search_engine.cpp  search_engine.h
src/similarity/: cosine.cpp  cosine.h
src/utils/: json_output.cpp  json_output.h  logger.cpp  logger.h  text_processor.cpp  text_processor.h
